--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
-      "ts-node": "3.3.0",
+      "@types/jest": "^26.0.20",
       "@types/node": "^8.0.29",
+      "jest": "^26.6.3",
+      "ts-jest": "^26.5.2",
+      "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
@@ -15,6 +18,8 @@
       "body-parser": "^1.18.1"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "test": "jest --config ./jest.config.json",
+      "test:watch": "npm run test -- --watch"
    }
 }
