--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
          "es6"
       ],
       "target": "es5",
-      "module": "esnext",
+      "module": "commonjs",
       "moduleResolution": "node",
       "outDir": "./build",
       "emitDecoratorMetadata": true,
